<resources>
    <string name="app_name">RentACar</string>
    <string name="naslov">Naslov</string>
    <string name="ovo_su_neki_detalji">Ovo su neki detalji</string>
    <string name="prikazi_detalje">Prikazi detalje</string>
    <string name="pretrazi">Pretrazi</string>
    <string name="title_activity_detail_view">DetailViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iznajmi">Iznajmi</string>
    <string name="naslov_detalji">Naslov</string>
    <string name="broj_sjedista">Broj sjedista:</string>
    <string name="broj_vrata">Broj vrata:</string>
    <string name="kubikaza">Kubikaza:</string>
    <string name="tip_motora">Tip motora:</string>
    <string name="snaga_motora">Snaga motora:</string>
    <string name="boja">Boja:</string>
    <string name="godiste">Godiste:</string>
    <string name="kilometraza">Kilometraza:</string>
    <string name="cijena_po_danu">Cijena po danu:</string>
    <string name="ocijeni_automobil">Ocijeni automobil(prosjecna ocjena)</string>
    <string name="firma">Firma</string>
    <string name="ovdje_ide_neki_opis_firme">Ovdje ide neki opis firme</string>
    <string name="grad">Grad:</string>
    <string name="adresa">Adresa:</string>
    <string name="email">Email:</string>
    <string name="broj_telefona">Broj telefona:</string>
    <string name="email_login">Email</string>
    <string name="lozinka_login">Lozinka</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="prezime">Prezime</string>
    <string name="ime">Ime</string>
    <string name="email_register">Email</string>
    <string name="registruj_se">Registruj se</string>
    <string name="lozinka_register">Lozinka</string>
    <string name="broj_telefona_register">Broj telefona</string>
    <string name="jmbg">Jmbg</string>
    <string name="neki_komentar">Neki komentar</string>
    <string name="_12_07_2020">12.07.2020</string>
    <string name="ime_prezime">Ime prezime</string>
    <string name="komentari">Komentari</string>
    <string name="dodaj_u_omiljene">Dodaj u omiljene</string>
    <string name="nemate_nalog">Nemate nalog?</string>
    <string name="prihvatam_uslove_koriscenja">Prihvatam uslove koriscenja</string>
    <string name="verzija_1_0_0">Verzija 1.0.0</string>
    <string name="datum_instalacije">Datum instalacije</string>
    <string name="rentacar_verzija_naslov">RentACar</string>
    <string name="broj_datum_instalacije">18.04.2020</string>
    <string name="memorija_naslov">Memorija</string>
    <string name="memorija_vrijednost">3.7MB</string>
    <string name="dozvole_naslov">Dozvole</string>
    <string name="baterija">Baterija</string>
    <string name="pristup_memoriji">Pristup memoriji</string>
    <string name="pocetna">Pocetna</string>
    <string name="prijava">Prijava</string>
    <string name="registracija">Registracija</string>
    <string name="podesavanja">Podesavanja</string>
    <string name="posalji_komentar">Posalji</string>
    <string name="komentar_ostavljanje">Komentar...</string>
    <string name="ostavite_komentar">Ostavite komentar</string>
    <string name="datum_uzimanja">Datum uzimanja:</string>
    <string name="datum_vracanja">Datum vracanja:</string>
    <string name="title_activity_navigation_view">NavigationView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="manage_player">meni</string>
    <string name="tournament">RentACar</string>
    <string name="detalji_automobila">Detalji automobila</string>
    <string name="pogledajte_detalje_aplikacije">Pogledajte detalje aplikacije</string>
    <string name="o_aplikaciji">O aplikaciji</string>
    <string name="velicina_slova">Velicina slova</string>
    <string name="jezik">Jezik</string>
    <string name="promijenite_temu_aplikacije">Promijenite temu aplikacije</string>
    <string name="tema">Tema</string>
    <string-array name="language_arrays">
        <item>Srpski</item>
        <item>English</item>
    </string-array>
    <string name="language_prompt">Izaberite jezik</string>
    <string name="sync_uspjesno">Uspjesna sinhronizacija</string>
    <string name="sync_neuspjesno">Neuspjesna sinhronizacija</string>

    <string name="odjava">Odjava</string>
    <string name="marka_model">Marka model</string>
    <string name="serijski_broj">7A85BX9A55Q</string>
    <string name="serijski_broj_naslov">Serijski broj</string>
    <string name="verzija_app_naslov">Verzija</string>
    <string name="verzija_app">1.0</string>
    <string name="sertifikat_naslov">Sertifikat</string>
    <string name="sertifikat_broj">ID: A486HWL505F</string>
    <string name="garancija_naslov">Garancija</string>
    <string name="garancija_broj">RentACar LTD. GARANTISI</string>
    <string name="poruka_mora_se_logovati">Molimo vas da se prethodno ulogujete!</string>
    <string name="cijena">Cijena</string>

    <string name="dan_d">dan</string>
    <string name="poruka_niste_iznajmili">Niste ispunili uslove da ocijenite auto!</string>
    <string name="poruka_niste_komentar">Niste ispunili uslove da komentarisete auto!</string>
    <string name="firma_naslov">Firma</string>
    <string name="ukupna_cijena">Ukupna cijena:</string>
    <string name="omiljeni">Omiljeni</string>
    <string name="iznajmljivanjeUspjesnoPoruka">Uspjesno ste iznajmili automobil!</string>
</resources>
