<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Aktivnosti.AboutActivity">

    <TextView
        android:id="@+id/appIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rentacar_verzija_naslov"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/brojVerzije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verzija_1_0_0"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/appDatumInstalacijeNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/datum_instalacije"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/appDatumInstalacije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_datum_instalacije"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/appMemorijaNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/memorija_naslov"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/appMemorija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memorija_vrijednost"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/appDozvoleNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dozvole_naslov"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/appDozvolaBaterija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baterija"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/appDozvolaMemorija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pristup_memoriji"
        android:textSize="14sp"
        />


</LinearLayout>