<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pocetna"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/pocetna" />
        <item
            android:id="@+id/nav_prijava"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/prijava" />
        <item
            android:id="@+id/nav_registracija"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/registracija" />
        <item
            android:id="@+id/nav_podesavanja"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/podesavanja" />
    </group>
</menu>