<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/slikaAutomobila"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">

        <TextView
            android:id="@+id/naslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naslov"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/detalji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ovo_su_neki_detalji"
            android:textSize="16sp">
        </TextView>

        <Button
            android:id="@+id/prikaziDetalje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            android:text="@string/prikazi_detalje"
            android:textSize="11sp" />
<!--            android:background="@color/svijetloPlava2"-->

    </LinearLayout>

</LinearLayout>